[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 39.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 135.522
margin_top = -87.9873
margin_right = -135.478
margin_bottom = 12.0127
custom_constants/separation = 37
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 249.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 249.0
margin_bottom = 77.0
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 249.0
margin_bottom = 134.0
text = "Quit"
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
